--- a/workload-2019-12-05.md
+++ b/workload-2019-12-05.md
@@ -1,7 +1,7 @@
-Grinnell's workload
-===================
+Grinnell's student workload
+===========================
 
-*Topics/tags: [Grinnell](index-grinnell), [academia](index-academia), data*
+*Topics/tags: [Grinnell](index-grinnell), [academia](index-academia), data, rambling*
 
 *I know that I've written about this topic before, but it seems
 like my muse wants me to write about it again.  At least she was
@@ -15,7 +15,7 @@ associated issues of [student persistence, workload, stress, and
 belonging](persistence-rate-2019-11-24), led me to return to the
 question of workload. If student workload is high, it adds to stress
 and likely gives them less time to participate in activities, which
-can contribute to a lack of feelings like they belong .  I believe
+can make it harder for them to find a sense of belonging.  I believe
 those are all contributing factors for students choosing not to
 persist at Grinnell.
 
@@ -38,17 +38,17 @@ recommended load.  At our expected credit-hour workload, that
 represents 48 hours per week.  That leaves twenty-four hours for
 other school-related activities.
 
-Our first example will be an athlete on a team, since about 40% of
+Our first example will be an athlete on a team since about 40% of
 our students fall into that category [4].  In season, these students
 are spending at least fifteen hours per week on athletics, since
-practice runs 4-7pm, including changing and getting to the Bear
-[5].  Most students need to work about ten hours per week.  Whoops!
+practice runs 4-7 pm, including changing and getting to the Bear
+[5].  Most students need to work for about ten hours per week.  Whoops!
 We've already exceeded the left-over twenty-four hours.  And we
 haven't even given these student-athletes time to join a club.
 
 Our next example will be a student working twenty hours per week
 [6].  Yes, I realize that it's a lot.  But I certainly encounter
-many of students in that situation.  How do I know?  Well, when I
+many students in that situation.  How do I know?  Well, when I
 ask them if they'd be interested in serving as a Class Mentor, they
 tell me that they are already at the limit of hours that Grinnell
 allows them to work.  Or I know that they are sending money home
@@ -74,28 +74,36 @@ have to cut corners somewhere, whether it means missing valuable
 talks, getting insufficient sleep [8], sacrificing wellness,
 neglecting academic work, or whatever [9].
 
+I also worry about how all of this work meshes with our desire to
+inculcate a growth mindset in our students.  While I certainly believe
+that all of our students are capable of mastering any topic at
+Grinnell, I also acknowledge that doing so sometimes takes significantly
+extra time and effort.  If our students are already over-burdened,
+will they be willing to take risks?
+
 What should we, as an institution, do?  I'm not sure.  We can't
-really change the definition of a credit hour, since there seem to
-be [Federal
+change the definition of a credit hour since there are
+[Federal
 guidelines](https://www.ecfr.gov/cgi-bin/text-idx?SID=ae813138f65c93bd81a17b66d59d067d&mc=true&node=pt34.3.600&rgn=div5#se34.3.600_12)
 about that [10,11,12].  But the forty-eight hours does seem to be a large 
 contributor to workload and stress.  As
 I've written before, we might work with the ambiguity of "twelve hours
-per week for a four-credit class" [14] by asking "For _who_?"  Is it for
-the average Grinnell student, the student who spends the most time
-on the class, the student who spends the least time, the average
-college student across all colleges in the US, or what?  I know
-that I see ratios of 3:1 or more for the amounts of time equally
-successful students spend on a take-home exam or homework assignment.
+per week for a four-credit class" [14] by asking "Twelve hours for
+_whom_?"  Is it for the average Grinnell student, the student who
+spends the most time on the class, the student who spends the least
+time, the average college student across all colleges in the US,
+or what?  I know that I see ratios of 3:1 or more for the amounts
+of time equally successful students spend on a take-home exam or
+homework assignment.
 
 And then there's the question of what grade the student is working
-toward.  I know many students who can quickly write a first draft 
-at about thirty minutes per page, and that draft will earn them at 
-least a C, and more likely a B.  But earning an A would likely take
-multiple hours per page of editing and revising.  The same is true
-for other kinds of homework assignment, such as problem sets.  Doing
-something that is nearly perfect requires substantially more time than
-doing something acceptable.
+toward.  I know many students who can write a draft at a rate of
+about thirty minutes per page, a draft will earn them at least a
+C, and more likely a B.  But earning an A would likely take multiple
+hours per page of editing and revising.  The same holds for other
+kinds of homework assignments, such as problem sets.  Doing something
+nearly perfect requires substantially more time than doing something
+acceptable.
 
 Ideally, we would want to make sure that no Grinnell student would
 have to spend more than twelve hours per week on a four-credit class
@@ -106,26 +114,27 @@ time a class takes. I know that my estimates have been known to be
 a bit off [15].  And it can be hard to tell; I was surprised last
 semester to receive complaints about the length of assignments that
 my colleagues had given and not heard complaints about.  I also
-know that some colleagues across the college don't estimate the
-length of assignments or other class work.  Students don't always
-estimate or count well, either.  There's a difference between time
-spent focused on class work and time spent with, say, Facebook or
-YouTube on the screen at the same time.
+know that some colleagues across the College don't even try to
+estimate the length of assignments or other classwork.  Students
+don't always estimate or count well, either.  There's a difference
+between time spent focused on classwork and time spent with, say,
+Facebook or YouTube on the screen at the same time.
 
 I realize that some might handle the problem, in part, by using a
 metric that is closer to "the amount of time the average college
-student would take"; my experience is that we give our students more
-work, or at least more challenging work, than many other institutions.
-But that short-changes our students.  Unfortunately, no one has found
-a good way for people to learn things both deeply and quickly.
+student would take".  After all, my experience is that we give our
+Grinnell students more work, or at least more challenging work, than many
+other institutions give their students.  But that short-changes our
+students.  Unfortunately, no one has found a good way for people
+to learn things both deeply and quickly, no matter how skilled the
+students.
 
-I am reminded that one approach is to help students learn to study
-better, or at least more efficiently.  Certainly, there has been a
-good push to get faculty and students to think more seriously about
-the results from the learning sciences.  But if students become
-more efficient, don't we have an obligation to increase the workload
-so that we can once again meet the Federal definition of credit
-hour? [16]
+One approach might be to help students learn to study better, or
+at least more efficiently.  Certainly, there has been a good push
+to get faculty and students to think more seriously about the results
+from the learning sciences.  But if students become more efficient,
+don't we have an obligation to increase the workload so that we can
+once again meet the Federal definition of credit hour? [16]
 
 It's a thorny problem.  Nonetheless, like the problem of student
 persistence, it's one we need to address.  I'm glad to know that
@@ -133,13 +142,22 @@ some folks who are better at this stuff than I are considering them.
 
 ---
 
-Postscript: There's some evidence that the Education Department is
+Postscript: There's some evidence that the U.S. Department of Education is
 [revisiting the definition of a credit
 hour](https://www.insidehighered.com/quicktakes/2019/03/12/more-confusion-credit-hour-definition).  That would certainly make our task a bit easier.
 
 ---
 
-[1] I believe the evidence is that this age may need a bit more, but we'll stick with eight.
+Postscript: This musing ended up much more disjoint than I'd planned.
+The more I wrote, the more nee things came to mind.  "What about
+growth mindset and the implications thereof?"  "Different grades
+likely require different amounts of work; how should we address that?"  
+"What groups of students should I consider?"
+
+---
+
+[1] I believe the evidence is that students of college age may need a
+bit more, but we'll stick with eight.
 
 [2] It's likely a bit less, but lines can be long in the dining hall.
 
@@ -151,9 +169,9 @@ correct.  I don't know whether it includes our club sports.  But it's
 a number I've heard used a lot, and it's a number I believe.
 
 [5] I realize that fifteen hours per week significantly underestimates
-the amount of time student-athletes spend on athletics in season.
-It doesn't count the extra time they are supposed to spend in the
-weight room, time in competition, and so on and so forth.
+the time student-athletes spend on athletics in season.  It doesn't
+count the extra time they are supposed to spend in the weight room,
+time in competitions, and so on and so forth.
 
 [6] My wonderful children tell me that they have encountered many
 peers who fall into both categories.  That is, they work twenty hours
@@ -183,7 +201,7 @@ letter](https://ifap.ed.gov/dpcletters/attachments/GEN1106.pdf).
 [12] It appears that you can blame the Obama administration for
 instituting this far too vague policy.
 
-[14] Or three hours per credit-hour, depending on how you think
+[14] Or three hours per credit hour, depending on how you think
 about it.
 
 [15] Again, that's because I see a wide range in how long things
@@ -198,4 +216,4 @@ a workload.
 
 ---
 
-*Version 0.1 of 2019-12-04.*
+*Version 1.0 of 2019-12-04.*
