--- a/eggnog-2019-12-09.md
+++ b/eggnog-2019-12-09.md
@@ -1,9 +1,9 @@
 Eggnog (and other holiday memories)
 ===================================
 
-*Topics/tags: [Autobiographical](index-autobiographical)*
+*Topics/tags: [Autobiographical](index-autobiographical), short*
 
-The other day, I opened a bottle of pre-made eggnog.  (That's eggnog
+The other day, I opened a bottle of pre-made eggnog.  (Eggnog
 with alcohol, in case you were wondering.)  Strangely enough, it
 brought back memories of my childhood.  What memories?  Well, when
 I was young, my parents regularly threw a party which they to which
@@ -13,23 +13,24 @@ evening."  So many aspects of that party flit through my brain,
 from the attendees who believed that you should hang tinsel one
 strand at a time to my father's tendency to purchase the tree at the
 last possible moment.  I also recall the struggles mom and I had
-with a few too-tall trees, particularly getting them in the stand.
-And, of course, there were the times that one of the dogs [4] knocked
-over the tree.  Mom had some beautiful goose egg ornaments that
-seemed to decrease in number each year because of damage [5].
+after dad died, dealing with a few too-tall trees, particularly
+getting them in the stand.  And, of course, there were the times
+that one of the dogs [2] knocked over the tree.  Mom had some
+beautiful goose egg ornaments that seemed to decrease in number
+each year because of damage [3].
 
 Where was I?  Oh, that's right.  Eggnog.  One of the long-time
 attendees at the party, Michael S, always brought eggnog that he made.
-This was the days before people worried about salmonella [2], so
+This was the days before people worried about salmonella [4], and
 he generally let the eggnog mellow for two weeks before the party.
 I expect that the quantities of bourbon and whiskey that were in
-the eggnog also kept down the dangers.  So, when I think of eggnog,
-I think of Michael S's eggnog.  My memories of the taste are not exact,
-but I look for the smooth mixture of whipped cream and eggs along
-with the bite of the alcohol.
+the eggnog also kept down the dangers.  When I think of eggnog, I
+think of Michael S's eggnog.  My memories of the taste are not
+exact, but I look for the smooth mixture of whipped cream and eggs
+along with the bite of the alcohol.
 
 Middle Son is talking about making real eggnog again this year.
-He's decided that he can use his *sous vide* device to pasturize
+He's decided that he can use his *sous vide* device to pasteurize
 the eggs while keeping them liquid.  We'll see.  I suppose we could
 also try to get local eggs, which I think are less likely to have
 salmonella.  I expect that we'll use the eggnog recipe in our
@@ -41,35 +42,39 @@ I look forward to seeing what he comes up with.
 Postscript: I wonder what Michael S. is doing these days.  What I
 remember most about him, other than the eggnog, is that he drove a
 Lotus [6] and that he was in a motorcycle "gang" of DEC [7] engineers
-who called themselves the "roving gonads" [8] and regularly went out 
-as a group for Chinese food.  I had some great dinners with them [9].
+who called themselves the "roving gonads" [9] and regularly went out 
+as a group for Chinese food.  I had some great dinners with them [10].
 
 ---
 
 [1] Description?
 
-[2] Or Sam and Ella [3].
+[2] Sax was an Airedale-mutt mix; the shape and coloring of an
+Airedale, but with straight hair and perhaps a bit larger than the
+typical Airedale.  Phoenix was a Tibetan terrier: small, black and
+stupid.
 
-[3] Or Sam and Janet evening.
+[3] The last one got broken last year.  Michelle and the kids worked
+really hard to glue it back together.  It's back on the tree this year.
 
-[4] Sax was an airdale-mutt mix; the shape and coloring of an airdale,
-but with straight hair.  Phoenix was a Tibetan terrier: Small, black
-and stupid.
+[4] Or Sam and Ella [5].
 
-[5] The last one got broken last year.  Michelle and the kids worked
-really hard to glue it back together.
+[5] Or Sam and Janet evening.
 
-[6] At least when it was working.  Lotus autos are notably finicky.
+[6] At least when it was working.  Lotus-brand sports cars are
+notably finicky.
 
-[7] Digital equipment corporation.
+[7] Digital Equipment Corporation [8].
 
-[8] Yes, they had women in the group.  As the party name suggests,
+[8] It was DEC, now it's RIP.
+
+[9] Yes, they had women in the group.  As the party name suggests,
 it was a time when people were less worried about the language they
 used.
 
-[0] At times, I look back at parts of my childhood and ask myself,
+[10] At times, I look back at parts of my childhood and ask myself,
 _What were my parents thinking?_
 
 ---
 
-*Version 0.1 of 2019-11-05.*
+*Version 1.0 of 2019-12-09.*
