--- a/one-drive-2019-12-10.md
+++ b/one-drive-2019-12-10.md
@@ -14,7 +14,7 @@ But that's strange, isn't it?  Every other cloud storage service I use [2]
 seems to have a mechanism for downloading a folder.  Why doesn't OneDrive?
 
 I thought I'd figured out a solution.  I downloaded the OneDrive application
-for Mac, started that application, and went through the multi-step log in
+for Mac, started that application, and went through the multi-step log-in
 process.  I got a OneDrive folder on my Mac along with the subfolders I
 expected.  But the shared folder didn't appear there.  My eventual hack
 was to create a subfolder, then go to the shared folder online and copy
@@ -42,7 +42,7 @@ wasn't where I expected it to be.  My files were in a folder called
 "One Drive - Grinnell College" [4].  The shared files were in a
 folder called "One Drive - _Other Person_ - _Shared Folder_" [5]
 in the parent directory of my OneDrive folder.  Not where I'd think
-to look.  And, of course, the files weren't really there; if I
+to look.  And, of course, the files weren't actually there; if I
 double-clicked on a file name, I had to wait a bit for it to appear,
 since OneDrive only downloads a file when you need it [6].  I think
 that's a good feature.
@@ -72,8 +72,9 @@ than me, particularly with regards to Microsoft products.
 [2] Let's see ... Google Drive, Box, DropBox, Mega, and a few more that
 I can't recall, but that friends have asked me to use from time to time.
 
-[3] I will admit that I did so with an intention to support this musing:
-"I called ITS; they didn't have any suggestions, either."
+[3] I will admit that I did so with an intention to support this
+musing.  I wanted to be able to write, "I called ITS; they didn't
+have any suggestions, either."
 
 [4] I didn't name it.  OneDrive did.
 
@@ -83,4 +84,4 @@ I can't recall, but that friends have asked me to use from time to time.
 
 ---
 
-*Version 0.1 of 2019-12-10.*
+*Version 1.0 of 2019-12-10.*
