--- a/cooking-2019-12-19.md
+++ b/cooking-2019-12-19.md
@@ -1,13 +1,13 @@
 Cooking
 =======
 
-*Topics/tags: [Autobiographical](index-autobiographical)*
+*Topics/tags: [Autobiographical](index-autobiographical), end-notable*
 
 Yesterday at water aerobics, someone mentioned that they had made
 black bean chili the other day.  I thought to myself "Wow, it's
 been a long time since I've made chili."  Then I realized that I
-hadn't really made anything non-trivial for a long time [1], at
-least not outside of holiday season.
+hadn't made anything non-trivial for a long time [1], at least not
+outside of the holiday season.
 
 For example, this Thanksgiving, I helped youngest with bagels,
 cooked the turkey, ham, and brisket, attempted the gravy [2], made
@@ -61,8 +61,8 @@ Sour mix.
 Why did I make sour mix?  Um, for no particularly good reason.  I had made
 simple syrup the other day and, in doing so, learned that sour mix is
 essentially simple syrup made with lemon juice and lime juice.  So it
-seemed like a good thing to attempt.  Plus, I really like sours.  Rum
-sours.  Whiskey sours.  Tequila sours [10].
+seemed like a good thing to attempt.  Plus, sours are one of my favorite
+drinks.  Rum sours.  Whiskey sours.  Tequila sours [10].
 
 After that, I went ahead and made something a bit more complex.  That
 is, I made a chili-like substance.  Why do I call it "a chili-like
@@ -82,7 +82,7 @@ think I prefer using the grill or, if necessary, the convection
 oven.  I spiced each ingredient separately before adding it to the
 pot.
 
-As I said, I think of this as a non-trivial dish to make, or at
+As I said, I think of this as a non-trivial dish to make or at
 least one that requires multiple steps.  It requires cooking a
 variety of things separately.  It requires playing with spices [21].
 I also have some traditional steps that add a little bit of extra
@@ -107,6 +107,36 @@ stock.  Maybe beer.  Maybe tomato juice.  Maybe a combination thereof.
 
 ---
 
+Postscript: After the chili, I decided to try an experiment in reducing
+a bottle of ginger ale back down to ginger syrup.  As Michelle suggested
+afterwards, it might have been okay if the ginger ale was made with
+sugar, but it was made with corn syrup.  In any case, I turned away for
+a bit too long [23] and managed to burn it to the bottom.  Plus, our
+house now smells like burnt sweetener.
+
+Fortunately, I have a pot scraper [24] and some chainmail [25].  It took
+a bit, but I managed to clean the bottom after thirty minutes or so.
+
+---
+
+Postscript: How did the other dishes turn out?  
+
+The sour mix is a bit thick, which provides an interesting mouth
+feel.  But it doesn't always mix as well as I'd like; it sometimes
+sinks to the bottom.  The taste is nice.  I enjoyed my bourbon sour
+more than my rum sour.  I'm not sure what I'll try next.  Oh, I did
+figure out that it tastes great on cornbread.
+
+The chili [26] is also good, particularly since I let it sit in the
+fridge overnight to allow the tastes to meld a bit more.  It has a
+nice, smokey, flavor, which may be due to the poblano, the can of
+fire-roasted tomatoes, or the cumin [27].  And I like the way the
+chicken worked out.  It has the texture I wanted (more substantial
+than ground beef) and a good taste.  Still, a few more black beans
+would have made the substance better.
+
+---
+
 [1] Yes, I realize that chili is comparatively trivial.  But I'm good
 at making comparatively trivial things more complex.
 
@@ -117,7 +147,7 @@ it, I'd need to edit the next paragraph.  All that seems to complex.
 
 [4] Not just the Super Bowl, which used to be a week or two off
 from Ground Hog's day [5], but also a variety of kid events.  There
-always seemed to be a swimming event the weekend we would want to
+always seemed to be a swimming event on the weekend we would normally
 hold our party [6].
 
 [5] This year, it's the same day as Ground Hog's Day, February 2.
@@ -155,8 +185,8 @@ days I prefer black beans.
 [17] I discovered that at Fareway, one poblano pepper costs about half
 of what one red bell pepper costs.
 
-[18] I toasted the spices multiple times, since I used them for the
-beans, the chicken, the onions, and the tomato base.
+[18] I toasted the spices repeatedly; I used them for the beans,
+the chicken, the onions, and the tomato base.
 
 [19] I prefer to use dried beans rather than canned beans.
 
@@ -167,6 +197,16 @@ beans, the chicken, the onions, and the tomato base.
 [22] I also use a can of diced tomatoes.  This time, I added a can of
 smoked crushed tomatoes.
 
+[23] Five minutes, to be precise.
+
+[24] A Lil' Chizler, to be precise.
+
+[25] It's great for cleaning cast iron.  And that's why I have it.
+
+[26] Or "chili-like substance".
+
+[27] Probably a combination.
+
 ---
 
-*Version 0.1 of 2019-12-18.*
+*Version 1.0 of 2019-12-19.*
