Minor fix before release.

--- a/credit-2020-01-18.md
+++ b/credit-2020-01-18.md
@@ -23,9 +23,9 @@ the presentation and discussion, I sent some questions to Dean
 Harris.  She responded thoughtfully and promptly, as is her norm.
 But she addressed the message to "Sam and all".
 
-Since we now have at least two occasions on which I seem to be receiving
-credit for work that is not my own, let me make sure that credit is
-assigned where credit is due.
+Since we now have at least two occasions on which I seem to be
+receiving some of the credit for work that is not my own, let me
+make sure that credit is assigned where credit is due.
 
 A host of people have done important work on trying to understand
 issues of persistence, belonging, thriving, and retention.  Joyce
