960: Use header, fix endnote.

--- a/cooking-2019-12-19.md
+++ b/cooking-2019-12-19.md
@@ -1,8 +1,12 @@
-Cooking
-=======
-
-*Topics/tags: [Autobiographical](index-autobiographical), end-notable*
-
+---
+title: Cooking
+number: 960
+tags: [Autobiographical](index-autobiographical), end-notable
+blurb: Returning to old habits
+version: 1.1
+released: 2019-12-19
+current: 2020-02-15
+---
 Yesterday at water aerobics, someone mentioned that they had made
 black bean chili the other day.  I thought to myself "Wow, it's
 been a long time since I've made chili."  Then I realized that I
@@ -88,7 +92,7 @@ variety of things separately.  It requires playing with spices [21].
 I also have some traditional steps that add a little bit of extra
 work.  I tend to use whole canned tomatoes and blend them to an
 appropriate consistency; that seems to give me a better result than
-tomato sauce, tomato paste, or just diced tomatoes [21].  I also
+tomato sauce, tomato paste, or just diced tomatoes [22].  I also
 blend one onion with a bit of tomato juice from the cans to get an
 onion slurry that adds something different than the chopped onions.
 
@@ -206,7 +210,3 @@ smoked crushed tomatoes.
 [26] Or "chili-like substance".
 
 [27] Probably a combination.
-
----
-
-*Version 1.0 of 2019-12-19.*
