--- a/swim-dive-2020-02-15.md
+++ b/swim-dive-2020-02-15.md
@@ -1,24 +1,25 @@
 ---
 title: The end of an era
-number: 
-tags: [Autobiographical](index-autobiographical)
-blurb: So much time in the sauna
-version: 0.1
-released: 
-current: 2020-02-15
+number: 1019
+tags: [Autobiographical](index-autobiographical), short
+blurb: So much time in the sauna.
+version: 1.0
+released: 2020-02-15
+current: 
 ---
 Today, Middle completed his last dive as a D3 athlete at Grinnell.
-It was a ????, which means "".  Learning how to interpret dive
-abbreviations was one of the thrills of having a son decide to dive
-[1].  I'm pretty sure that that makes today the last time I sit in
-the sauna that is the Osgood Natatorium [2], watching one of my
-offspring compete.
+It was a 405C, which means "inward dive, two-and-a-half somersault,
+tuck position", or something like that.  Learning how to interpret
+dive abbreviations was one of the thrills of having a son decide
+to dive [1].  I'm pretty sure that that makes today the last time
+I sit in the sauna that is the Osgood Natatorium [2], watching one
+of my offspring compete.
 
 I appreciate how divers and swimmers can be simultaneously competitive
 and cooperative.  Divers, in particular, impress me with their
 mutual support.  I like that they do a cheer together at the start
 of their portion ofo the meet.  I like that they all seem to cheer
-each other after a dive.  I like that ithis morning I watched a
+each other after a dive.  I like that this morning I watched a
 coach and a diver encourage someone from another school during
 practice.  Supportive.
 
@@ -35,6 +36,11 @@ And I'll always want to support my student swimmers [9], even if I
 won't be here quite as often.
 
 At least there's alumni weekend.
+
+---
+
+**_Postscript_**: Aren't you glad to have a break from musings about
+my experience of _The Craft of Creative Nonfiction_?
 
 ---
 
