--- a/thankful-2020-03-23.md
+++ b/thankful-2020-03-23.md
@@ -3,9 +3,9 @@ title: Proud and Thankful
 number: 1034
 tags: [Thank-you notes](index-thank-you), [Grinnell](index-grinnell)
 blurb: So many wonderful people!
-version: 0.1
-released: 
-current: 2020-03-23
+version: 1.0
+released: 2020-03-23 
+current: 
 ---
 These past few weeks have been, well, crazy.  Like most people, I'm
 not sure how to react to it all.  I'm doing my best to physically
@@ -13,7 +13,7 @@ isolate myself from others (with the exception of my family) and
 to support others as best I can.  Because I am on sabbatical and
 because I spent the week of March 9 in Portland, attempting to
 attend a conference, and the week of March 16 mostly at home since
-the College has asked me to stay off campus, I've been spared from
+the College asked me to stay off campus, I've been spared from
 the vast majority of the complexities on campus.  But that doesn't
 mean that I haven't been paying attention to what's been happening.
 
@@ -27,7 +27,7 @@ should leave campus if possible.  I appreciate the many people
 involved in those decisions.  I am especially thankful for the
 people who did the hard work of figuring out policies and procedures
 and carrying out those policies and procedures to help our students
-get safely out of the dorms and then home (or other safe place).
+get safely out of the dorms and to home (or other safe place).
 I expect that not all students agree with individual decisions, but
 it strikes me that Grinnell has done a much better job than most
 institutions.  And I know that our staff, particularly our student
@@ -79,9 +79,11 @@ appreciate the others who've spoken and who have worked behind the
 scenes.
 
 While Grinnell has asked most faculty and staff to work from home,
-there are a number of people who must still work on campus, including
-staff from Facilities Management, the Mail room, ITS, and more.  I
-am particularly thankful for the extra work these folks are putting
+there are many who must still work on campus, including staff from
+Facilities Management, the Mailroom, Dining Services, Campus Safety,
+ITS, Student Health and Wellness, and more [2].  I expect some
+Administrators and some Student Affairs folks are also on campus.
+I am particularly thankful for the extra work these folks are putting
 in.  Especially with children home from school and the broader state
 of the world, I expect that is particularly hard.
 
@@ -94,3 +96,5 @@ community.
 ---
 
 [1] Since I'm both a faculty member and a parent, it's hard to tell.
+
+[2] Wow, that's a lot.
