Fix typo (thanks Micki)

--- a/summer-2020-maps-2020-04-03.md
+++ b/summer-2020-maps-2020-04-03.md
@@ -3,9 +3,9 @@ title: Summer 2020 MAPs
 number: 1038
 tags: [Grinnell](index-grinnell)
 blurb: Let's go virtual!
-version: 1.0
+version: 1.0.1
 released: 2020-04-03
-current: 
+current: 2020-04-03
 ---
 Today is April 3.  In one week, on April 10, the College will be
 making decisions about Summer MAPs (Mentored Advanced Projects).
@@ -76,7 +76,7 @@ National Center for Women in Information Technology, are encouraging
 those who support summer opportunities to convert those to
 remote/virtual opportunities when possible.
 
-Grinnel even has some implicit and explicit support for remote MAPs.
+Grinnell even has some implicit and explicit support for remote MAPs.
 Certainly, our efforts at running asynchronous remote classes suggest
 that we believe that there can be benefits from remote learning.
 We also have [official policies and guidelines for remote
