Add musing 1084: SM Word

--- a/sm-word-2020-06-13.md
+++ b/sm-word-2020-06-13.md
@@ -3,9 +3,9 @@ title: SM Word
 number: 1084
 tags: [Rants](index-rants)
 blurb: Getting things backwards (or backwords).
-version: 0.1
-released: 
-current: 2020-06-12
+version: 1.0
+released: 2020-06-13
+current:
 ---
 Because of Grinnell's new and restrictive software policies, I've
 been trying to adapt to using Microsoft products.  As I've noted
@@ -40,17 +40,23 @@ Who's RS?  That's me, right?  "Rebelsky, Samuel".  Do you want to
 figure that out?  What happens when Ralph Savarese and I are both
 editing the same document?  Since people are used to initials being
 first-last, the odds are that I get credited for carefully crafted
-writng and Ralph gets blamed for wanton destruction.
+writing and Ralph gets blamed for wanton destruction.
 
-**Dear Microsoft: Is it really that hard to make your damn products
+**Dear Microsoft: Is it that hard to make your damn products
 consistent?**
 
 Dear ITS: Can we perhaps select products that work correctly?
 
 ---
 
+**_Postscript_**: Despite my frustrations, I've found some aspects
+of the Microsoft ecosystem almost decent.  The single-sign-on integration
+with Duo is even feeling relatively natural [8].
+
+---
+
 [1] They are not intuitive to me, but they may be intuitive to
-people who have drunk the Microsoft Kool Aid.  Of course, I asked
+people who have drunk the Microsoft Kool-Aid.  Of course, I asked
 one person who uses Microproducts regularly how I could sync a
 folder on Sharepointless to my local drive, and they were unable
 to figure it out.  I may have written about that experience.
@@ -71,3 +77,5 @@ CW streaming service this evening.
 product.
 
 [7] Is it called "Word for Web"?  I'm not sure.
+
+[8] I may be the only person who feels that way.
