--- a/far-2020-06-30.md
+++ b/far-2020-06-30.md
@@ -1,9 +1,9 @@
 ---
-title: Preparing to fill out my Faculty Activity Report
+title: Preparing to fill out my annual Faculty Activity Report
 number: 1091
 tags: [Academia](index-academia)
 blurb: I wonder what other institutions do.
-version: 0.1
+version: 1.0
 released: 
 current: 2020-06-30
 ---
@@ -107,7 +107,7 @@ I wonder how the form is supposed to deal with folks like them.
 > MAPs, Independent Studies, Seminars, Creative Research / Performances, etc.
 
 Hmmm.  I wonder what teaching activities I might include.  I wonder where
-they get put on Sedona (or if they get put on Sedona).  Since student 
+they get put in Sedona (or if they get entered in Sedona).  Since student 
 research is now an expected part of our work, at least if we want full-year
 sabbaticals [3], I guess it makes sense to write it here.  Once again,
 I wonder where it ends up on Sedona.  I don't see a "Contributions to
@@ -137,7 +137,8 @@ Student Research" section anywhere there.
 
 > **I would like to include my work in Digital Grinnell**
 
-I guess that's an easier way to work with things than on Sedona.
+I guess that's an easier way to work with things than on Sedona.  What's
+it like to enter a research paper in Sedona?  Well, here's the form.
 
 <img src="images/SedonaProceedings.jpg" width=600 alt="A Web page with
 two columns.  In the first column, there are more than a dozen fields 
@@ -145,21 +146,21 @@ and about six different sets of radio buttons.  In the second column,
 there are at least twenty-five other field, including five groups of
 five or so for authors.">
 
-I still wonder why Sedona doesn't allow us to enter something is,
-say BibTeX or Endnote format and parse the info out itself.  I feel
-sorry for the ASAs who are asked to do so.
+I still wonder why Sedona doesn't allow us to enter something in,
+for example, BibTeX or Endnote format and parse the info out itself.
+I feel sorry for the ASAs who are asked to do so.
 
 I appreciate that there's a question about [Digital
 Grinnell](https://digital.grinnell.edu/).  We should be encouraged to
 put our work there.  It would be nice if there were also a link.
 
-*On to the next page.*  What page is that?  Four, I believe.  I
+*On to the next page.*  What page is that?  Four, I believe.  It
 depends on how you count.  I didn't count the opening page;
 alternately, I seem to have counted it as page zero.  The one that
 asked me to enter my name and email address was page one.
 Oooh!  Here's another UI suggestion.  Why not have it say "Page N of M"?
 I do see from the top of the page that I am not about 65% done.  That's
-strange, since I was only about 25% done on the prevous page.  I guess
+strange, since I was only about 25% done on the previous page.  I guess
 they are counting the number of fields.
 
 > **Grant Activity**
@@ -190,13 +191,13 @@ we're required to do so for grants that small.
 
 > Briefly describe support for scholarship, curricular development, or pedagogical needs that are not likely to be met by the standard support processes.
 
-This page seems to be a bit of a of topics.  I wonder why
-they didn't put service on one page and everything else on the next
-page.  And when will we get to annotate this?  That will be fun to
-discover.  I'd ask, except I don't think the person who gets all of this
-needs to be bothered more.  I also wonder if anyone ever reads the needs
-statement.  I used to take it seriously, but the evidence was that no
-one saw it.
+This page seems to be a bit of a *smörgåsbord* of topics.  I wonder
+why service isn't on one page, with everything else on the next
+page.  And when will we get to annotate our service?  That will be
+fun to discover.  I'd ask, except I don't think the person who gets
+all of this needs to be bothered more.  I also wonder if anyone
+ever reads the needs statement.  I used to take it seriously, but
+the evidence was that no one saw it.
 
 *On to page six, the last page*.
 
@@ -204,25 +205,26 @@ one saw it.
 
 > **Submit FAR**
 
-No, it doesn't really say "Overworked ASA".  I just know that they are.  I
+No, it doesn't actually say "Overworked ASA".  I just know that they are.  I
 hear they've been asked to take on even more responsibilities than normal
 right now, and, as far as I could tell, they already had too many [5].
 
 ---
 
 **_Postscript_**: Since I think Sedona is still involved in our
-FARs, I thought I'd go take a look on Sedona.  You could probably
-tell, since I already shared a screenshot.  I'm intrigued to see
-that under the "Reports" menu, there are two reports entitled "FAR
-(Faculty Activity Rep".  Both say "Generating Curriculum Vitae"
-while they're doing the generation.  The first appears to generate
-the 2019-2020 FAR, the second the 2017-2018 FAR. Or do I just get that
-because I forget to enter anything for 2018-10?
+FARs, I thought I'd go take a look at what Sedona does with FARs.
+You could probably tell, because I included that wonderful screenshot.
+I'm intrigued to see that under the "Reports" menu, there are two
+reports entitled "FAR (Faculty Activity Rep".  Both say "Generating
+Curriculum Vitae" while they're doing the generation.  The first
+appears to generate the 2019-2020 FAR, the second the 2017-2018
+FAR. Or do I just get that because I forget to enter anything for
+2018-10?
 
 Looking at my current FAR, it looks like I have a bit of work to do to
 get my work up to date.  I was on sabbatical this past year, so there's
 probably not any teaching [7,8].  But I did a lot of service.  I had a
-panel accepted to a conference; of course, the conference got cancelled
+panel accepted to a conference; of course, the conference got canceled
 after I arrived at the site.  That's a separate matter.
 
 In any case, it feels like I'm going to have a lot of work to do 
@@ -247,12 +249,12 @@ for the soul.
 
 [3] Next time!
 
-[4] I submitted it in early June.  I think I hear in mid-July.
+[4] I submitted it in early June.  I think I will hear back in mid-July.
 
-[5] We have a group of people on campus for whom it is acknowledge that
-it will require at least 1.5 people, and probably two or more to replace
-them.  This person is one of them.  I hope people realize how much they
-do [6].
+[5] We have a group of people on campus for whom it will require
+at least 1.5 FTE, and probably two or more, to replace them.  This
+person is one of them.  I hope other people realize how much this
+person does [6].
 
 [6] No, I am not saying that to suck up.  After twenty-plus years, I'm
 unlikely to significantly affect this person's view of me.
