Fix minor typo.

--- a/far-2020-06-30.md
+++ b/far-2020-06-30.md
@@ -3,9 +3,9 @@ title: Preparing to fill out my annual Faculty Activity Report
 number: 1091
 tags: [Academia](index-academia)
 blurb: I wonder what other institutions do.
-version: 1.0
-released: 
-current: 2020-06-30
+version: 1.0.1
+released: 2020-06-30 
+current: 2020-07-01
 ---
 At the end of each academic year, Grinnell faculty are expected to
 submit a Faculty Activities Report (or FAR).  Since our Fiscal Year
@@ -219,7 +219,7 @@ reports entitled "FAR (Faculty Activity Rep".  Both say "Generating
 Curriculum Vitae" while they're doing the generation.  The first
 appears to generate the 2019-2020 FAR, the second the 2017-2018
 FAR. Or do I just get that because I forget to enter anything for
-2018-10?
+2018-19?
 
 Looking at my current FAR, it looks like I have a bit of work to do to
 get my work up to date.  I was on sabbatical this past year, so there's
