Deal with extra referent.

--- a/on-hiatus-2020-07-23.md
+++ b/on-hiatus-2020-07-23.md
@@ -3,9 +3,9 @@ title: Going on hiatus
 number: 1105
 tags: [Meta-musings](index-meta-musings), rambly
 blurb: It's never good when my musings begin with a list of positives.
-version: 1.0
+version: 1.0.1
 released: 2020-07-23
-current: 
+current: 2020-07-23
 ---
 I have an amazing family.  It's been great to have them home or
 nearby since Father's day.
@@ -54,7 +54,7 @@ things I and others need to successfully teach online, to have to
 argue for bandwidth, and software, and iPads for my colleagues,
 while ITS seems to think that we are lucky to receive webcams and
 headphones and microphones [1].  What good is any of this if faculty
-don't have the bandwidth for reasonable quality video conferencing [2]?
+don't have the bandwidth for reasonable-quality video conferencing?
 And what kind of institution thinks it's worthwhile trumpeting the
 webcams and headphones and microphones to parents as the great
 technology we are providing to faculty to ensure successful online
